--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<div>welcome! pick a box you like and start drawing. &gt;&gt;about this campaign&lt;&lt;</div>
-    <img src="img/qrcodepng.png" width="60" height="60" alt=""/>
-    <canvas id="drawing-board" width="595" height="842"></canvas>
-<div class="main">
-	<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
+		<canvas id="drawing-board" width="" height=""></canvas>
+		<div class="main">
+			<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
 <!-- 画笔颜色 -->
-	<div class="penColor" title="颜色">
+			<div class="penColor" title="颜色">
 				<div id="penColor-hidden" style="display: none;">
 					<div class="penColorItem" title="黑色"><div></div></div>
 					<div class="penColorItem" title="红色"><div></div></div>
