--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<canvas id="drawing-board" width="595" height="842"></canvas>
-		<div>welcome! pick a box you like and start drawing. &gt;&gt;about this campaign&lt;&lt;</div>
-<img src="img/qrcodepng.png" width="60" height="60" alt=""/>
-<div class="main">
-	<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
+		<div><a href="instraction.html">>>了解上海抗疫写画接力活动<<</a>Content for New div Tag Goes Here</div>
+		<img src="img/qrcode_xyy973375582.github.io.png" width="60" height="59" alt=""/>
+	<canvas id="drawing-board" width="" height=""></canvas>
+		<div class="main">
+			<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
 <!-- 画笔颜色 -->
-	<div class="penColor" title="颜色">
+			<div class="penColor" title="颜色">
 				<div id="penColor-hidden" style="display: none;">
 					<div class="penColorItem" title="黑色"><div></div></div>
 					<div class="penColorItem" title="红色"><div></div></div>
