--- a/index.html
+++ b/index.html
@@ -7,42 +7,13 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<div><a href="instraction.html">>>了解上海抗疫写画接力活动<<</a>Content for New div Tag Goes Here</div>
-		<img src="img/qrcode_xyy973375582.github.io.png" width="60" height="59" alt=""/>
-	<canvas id="drawing-board" width="" height=""></canvas>
-		<div class="main">
-			<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
-<!-- 画笔颜色 -->
-			<div class="penColor" title="颜色">
-				<div id="penColor-hidden" style="display: none;">
-					<div class="penColorItem" title="黑色"><div></div></div>
-					<div class="penColorItem" title="红色"><div></div></div>
-					<div class="penColorItem" title="蓝色"><div></div></div>
-					<div class="penColorItem" title="黄色"><div></div></div>
-					<div class="penColorItem" title="绿色"><div></div></div>
-					<div class="penColorItem" title="灰色"><div></div></div>
-				</div>
-			</div>
-			
-<!-- 画笔宽度 -->
-			<div class="penSize" id='shape-lineWidth' title="线宽">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div id="lineWidth-hidden" style="display: none;">
-					<div class="box-hover"><div></div></div>
-					<div class="box-hover"><div></div></div>
-					<div class="box-hover"><div></div></div>
-					<div class="box-hover"><div></div></div>
-					<div class="box-hover" style="font-size: 5px;"><input type="range" id="inputLineWidth" min="1" max="30"/><span>1-30px</span></div>
-				</div>
-			</div>
-				<div class="toolsItem" id="pen"title="画笔"></div>
-				<div class="toolsItem" id="eraser"title="橡皮擦"></div>
-				<div class="toolsItem" id="clear"title="清空"></div>
-				<div class="toolsItem" id="return" title="上一步"></div>
-				<div class="toolsItem" id="save" title="保存"></div>
-		</div>
-		<script src="main.js"></script>
-	</body>
+	<p>写画接力活动的介绍文档</p>
+	<p>在上海这场疫情中，你想写写画画什么都可以在这个白板上进行。</p>
+	<p>完成了别忘记保存这张图片，发到朋友圈，让更多的人看到。</p>
+	<p> 微信的用户请点击默认浏览器，以确保能够保存。</p>
+	<img src="img/step1.jpg" width="207" height="270" alt=""/><a href="canvas.html"><img src="img/back.svg" alt="" width="100" height="30"></a>
+		
+		
+		
+</body>
 </html>
