--- a/canvas.html
+++ b/canvas.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<div><a href="index.html">>>了解上海抗疫写画接力活动<<</a>Canvas for Writting and Drawing</div>
-		<img src="img/qrcode_xyy973375582.github.io.png" width="60" height="59" alt=""/>
-	<canvas id="drawing-board" width="" height=""></canvas>
+		<img class="qrcode" src="img/result.png" width="60" height="59" alt=""/>
+	<canvas style="position: fixed; top: 0; left: 0" id="drawing-board" width="" height=""></canvas>
 		<div class="main">
 			<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
 <!-- 画笔颜色 -->
