--- a/canvas.html
+++ b/canvas.html
@@ -7,9 +7,36 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<div><a href="index.html">>>了解上海抗疫写画接力活动<<</a>Canvas for Writting and Drawing</div>
-		<img class="qrcode" src="img/qrcode.png" width="150" height="150" alt=""/>
-	<canvas style="position: fixed; top: 0; left: 0" id="drawing-board" width="" height=""></canvas>
+		<div>
+			
+			<div style="position: absolute; up: 10px; right: 10px;"> 
+				<strong>Canvas for Writting and Drawing</strong> 
+				<br />	
+
+				<a href = "index.html" ><img src = 'img/info.png' width="240" style='position:  absolute; up:60px; right:0px;'/> </a>
+
+		
+			</div>
+			
+			<span><img class="qrcode" src="img/qrcode.png" width="150" height="150" alt=""/> 
+			</span>
+			
+			<!--<span><a href="index.html" text-align:center> >>了解上海抗疫写画接力活动<<  </a> Canvas for Writting and Drawing
+			</span> -->
+			
+	 	</div>
+		
+		
+		
+		
+		
+		<canvas style="position: fixed; top: 0; left: 0" id="drawing-board" width="" height="">
+	
+		</canvas>
+		
+		
+		
+		
 		<div class="main">
 			<!-- <input type="range" id="size" min="1" max="30" value="5" /> -->
 <!-- 画笔颜色 -->
