--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>写画接力活动的介绍文档</p>
 	<p>在上海这场疫情中，你想写写画画什么都可以在这个白板上进行。</p>
 	<p>完成了别忘记保存这张图片，发到朋友圈，让更多的人看到。</p>
-	<p> 微信的用户&nbsp; ！！请点击默认浏览器，以确保能够保存你的画！！</p>
+	<p> 微信的用户&nbsp; ！！<strong>请点击默认浏览器，以确保能够保存你的画！！</strong></p>
 	<img src="img/step1.jpg" width="207" height="270" alt=""/>
 	<div>&nbsp;</div>
 	<a href="about.html"><a href="canvas.html"><img src="img/back.svg" alt="" width="200" height="62"></a>
