--- a/canvas.html
+++ b/canvas.html
@@ -19,7 +19,7 @@
 	-->
 	<div>
 			
-			<div style="position: absolute; up: 10px; right: 10px;"> 
+			<div style="position: absolute; top: 10px; right: 10px;"> 
 				<strong style='color: white' >Canvas for Writting and Drawing</strong> 
 				<br />	
 
@@ -35,17 +35,13 @@
 			</span> -->
 			
 	 	</div>
-		
-		
-		
-		
-		
+			
 		<canvas style="background-color: black;
-					   position: fixed; top: 0; left: 0 color='black'" id="drawing-board" width="" height="">
+					   background-image: url(img/canvas_background.png);
+					   position: fixed; top: 0; left: 0 color='black'" id="drawing-board" width="" height="" >
 	
 		</canvas>
-		
-		
+
 		
 		
 		<div class="main">
