--- a/canvas.html
+++ b/canvas.html
@@ -37,6 +37,7 @@
 	 	</div>
 			
 		<canvas style="background-color: black;
+                  <!--background-image: url(img/canvas_background.png);-->
 					   
 					   position: fixed; top: 0; left: 0 color='black'" id="drawing-board" width="" height="" >
 	
