--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 		<p style="color: white">
 			你可以在这个画布上写写画画你的想法、见闻或是祝福。
 		</p>
-		<p style="color: white">完成之后保存图片，发给朋友或朋友圈，让更多的人看到并且参与其中。
+		<p style="color: white">
+			完成后保存图片，发给朋友或朋友圈，让大家加入其中
 		</p>
-		<p style="color: white"> 微信用户&nbsp; ！！<strong style="color: aqua">请点击默认浏览器，以确保能够保存你的画！！</strong>
+		<p style="color: white"> 微信用户&nbsp; <strong style="color: aqua">请点击默认浏览器，以确保能够保存你的画</strong>
 		</p>
 		<div><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><<br /><br /> 
 		</div>
