--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<div><a href="instraction.html">>>了解上海抗疫写画接力活动<<</a>Content for New div Tag Goes Here</div>
+		<div><a href="instraction.html">>>了解上海抗疫写画接力活动<<</a></div>
 		<img src="img/qrcode_xyy973375582.github.io.png" width="60" height="59" alt=""/>
 	<canvas id="drawing-board" width="" height=""></canvas>
 		<div class="main">
