--- a/canvas.html
+++ b/canvas.html
@@ -20,7 +20,7 @@
 	<div>
 			
 			<div style="position: absolute; top: 10px; right: 10px;"> 
-				<strong style='color: rgb(0, 0, 0)' >Canvas for Writting and Drawing</strong> 
+				<strong style='color: rgb(0, 0, 0)' >Canvas for Writing and Drawing</strong> 
 				<br />	
 
 				<a href = "index.html" ><img src = 'img/info.png' width="240" style='position:  absolute; up:60px; right:0px;'/> </a>
