--- a/canvas.html
+++ b/canvas.html
@@ -38,7 +38,7 @@
 			
 		<canvas style="background-color: rgb(255, 255, 255);
 					   
-					   position: fixed; top: 0; left: 0 color='black'" id="drawing-board" width="" height="" >
+					   position: fixed; top: 0; left: 0 color='white'" id="drawing-board" width="" height="" >
 	
 		</canvas>
 
