--- a/canvas.html
+++ b/canvas.html
@@ -20,7 +20,7 @@
 	<div>
 			
 			<div style="position: absolute; top: 10px; right: 10px;"> 
-				<strong style='color: rgb(0, 0, 0)' >Canvas for Writing and Drawing</strong> 
+				<strong style='color: rgb(0, 0, 0)' >Canvas for Writting and Drawing</strong> 
 				<br />	
 
 				<a href = "index.html" ><img src = 'img/info.png' width="240" style='position:  absolute; up:60px; right:0px;'/> </a>
@@ -28,7 +28,7 @@
 		
 			</div>
 			
-			<span><img class="qrcode" src="img/qrcode.svg" width="150" height="150" alt=""/> 
+			<span><img class="qrcode" src="img/qrcode.png" width="150" height="150" alt=""/> 
 			</span>
 			
 			<!--<span><a href="index.html" text-align:center> >>了解上海抗疫写画接力活动<<  </a> Canvas for Writting and Drawing
@@ -37,8 +37,7 @@
 	 	</div>
 			
 		<canvas style="background-color: rgb(255, 255, 255);
-					   
-					   position: fixed; top: 0; left: 0 color='white'" id="drawing-board" width="" height="" >
+				position: fixed; top: 0; left: 0 color='white'" id="drawing-board" width="" height="" >
 	
 		</canvas>
 
